syntax = "proto3";

package user_proto;

service UserService {
  // API for user login
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string type = 1; // Type of login (e.g., email, username)
  string identity = 2; // Login identifier (e.g., email address or username)
}

message LoginResponse {
  message User {
    string name = 1; // Name of the user
    string email = 2; // Email address of the user
    string phoneNumber = 3; // Phone number of the user
  }
  User user = 1; // User details
  string token = 2; // Authentication token for the session
}
